--- a/wwwroot/client/index.html
+++ b/wwwroot/client/index.html
@@ -4,9 +4,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.31d6cfe0d16ae931b73c.css"></head>
+<link rel="stylesheet" href="styles.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime.4b1540bf51da5ef20c67.js" defer></script><script src="polyfills.7d99fe739f19bbf4acee.js" defer></script><script src="main.118038014ed55511cb50.js" defer></script>
+<script src="runtime.js" defer></script><script src="polyfills.js" defer></script><script src="main.js" defer></script>
 
 </body></html>
